theme/cramppbo/css/style.css
* {
  font-family: "Century Gothic", "MS Trebuchet", Verdana;
}

html, body {
  height: 100%;
}

body {
  text-align: center;
  position: relative;
}

body #wrapper {
  min-height: 100%;
}

body #page {
  padding-bottom: 26px;
}
a, a:visited {
  color: #C70;
}

p {
  padding-top: 10px;
  font-size: 12px;
}

form, input { 
  display: inline;
}

input.empty {
  color: #333;
  font-style: italic;
  font-size: 10px;
}

input.ui-autocomplete-input {
  text-align: right;
}

.hidden {
  display: none;
}

#fancybox-outer {
  border: 2px solid #666;
}

#fancybox-content {
  font-size: 12px;
  border: 1px solid #666;
}


.ajax-loader {
  height: 11px;
  width: 16px;
  background: url('/theme/cramppbo/images/ajax-loader.gif') no-repeat;
}

img.loading {
  display: block;
  width: 220px;
  height: 19px;
  margin-left: auto;
  margin-right: auto;
  margin-top: auto;
  margin-bottom: auto;
  padding-top: 150px;
}

h1 {
  font-size: 16px
  font-weight: bold;
  padding-bottom: 30px;
}

dt {
  font-weight: bold;
  font-size: 13px;
  padding-bottom: 5px;
}

dd { 
  padding-bottom: 25px;
  font-size: 12px;
}

.quicklink {
  cursor: pointer;
}

.profile img {
  padding: 1px;
  border: 1px solid #CCC;
  margin: 0 5px 5px 0;
}

.profile h1 {
  font-size: 14px;
  font-weight: bold;
  padding-bottom: 0;
}

.profile h2 {
  font-size: 10px;
  padding-top: 3px;
  font-weight: normal;
}

.profile h3 {
  font-size:: 12px;
  font-weight: bold;
}


#toolbar {
  padding: 5px 0;
  width: 100%;
  height: 20px;
  background: #FA3;
  position: fixed;
  box-shadow: 0 0 3px #000;
  -moz-box-shadow: 0 0 3px #000;
  -webkit-box-shadow: 0 0 3px #000;  
  -ms-filter: "progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=0, Color='#000000')";
  filter: progid:DXImageTransform.Microsoft.Shadow(Strength=3, Direction=0, Color='#000000');  
  overflow: hidden;  
  z-index: 1000;    
}

#toolbar #tools {
  width: 630px;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
  position: relative;
  z-index: 1000;  
}

#toolbar #tools #nowplaying {
  position: absolute;
}

#toolbar .listeners {
  margin-left: auto;
  margin-right: auto;
  display: block;
  top: 0;
  width: 500px;
  text-align: right;
  position: relative;
  float: right;
}

#toolbar .indicators {
  float: right;
  position: relative;
  top: 2px;
  height: 20px;
}

#toolbar .indicators img {
  cursor: pointer;
}

#toolbar .listeners .container {
  position: absolute;
  z-index: 51;
}

#toolbar .listeners img {
  border: 1px solid #999;
  padding: 1px;
  margin-right: 3px;
  height: 18px;
  width: 18px;  
}

#toolbar #tools #ops {
  position: absolute;
  top: 30px;
  z-index: 55;
}

#toolbar #volume {
  display: block;
  position: absolute;
  left: 25px;
  top: 5px;
  border: 1px solid #333;
  height: 4px;
  width: 100px;
  padding: 1px;
}

#toolbar .advanced {
  position: absolute;
  top: 0;
  left: 145px;
  width: 200px;
  border-left: 1px dashed #333;
  padding-left: 15px;
}

#toolbar .advanced img {
  display: inline;
  padding-right: 10px;
  cursor: pointer;
}

#toolbar #volume img {
  border: 0;
  width: 8px;
  height: 4px;
  padding: 0 1px;
  margin: 0;
  cursor: pointer;
}

#toolbar .song_title {
  font-weight: bold;
}

#toolbar .progress {
  position: absolute;
  left: 0;
  top: -10px;
  width: 100%;
  right: 0;
  border: none;
  z-index: 50;
}

#toolbar .progress .slider {
  background-color: #F7A025;
  z-index: 50;
}

#toolbar .progress, #toolbar .progress .slider {
  height: 30px; 
}

#page {
  width: 626px;
  text-align: left;
  margin-left: auto;
  margin-right: auto;
}

#logo {
  width: 300px;
  height: 200px;
  background: #dfdfdf;
  border: 1px solid #a9a9a9;
}

#queue #now_playing, #queue #intro {
  position: relative;
  padding: 15px;
  width:382px;
  height: 170px;
  background: #dfdfdf;
  border: 1px solid #dfdfdf;
  margin: 0 10px 10px 0;
  float: left;  
}

#queue #now_playing #album {
  font-size: 11px;
}

.progress {
  height: 12px;
  width: 200px;
  margin-top: 10px;  
  border: 1px solid #a9a9a9;
  font-size: 10px;
}

.progress .slider {
  height: 12px;
  width: 1px;
  background-color: #a9a9a9;
  position: relative;
}

.progress .time {
  position: absolute;
  left: 5px;
  width: 120px;
}

.progress .time_current, .progress .time_total { width: 50px; }

#collection {
  padding-top: 40px;
  width: 626px;
  position: relative;
}

#collection .header {
  border: solid 1px #dfdfdf;
  background: #dfdfdf;
  font-size: 12px;
  padding: 5px;
  height: 15px;
  cursor: pointer;
  position: relative;
}

#collection .header #search {
  position: absolute;
  width: 175px;
  top: 3px;
  left: 430px;
  display: none;
}

#collection #browser {
  font-size: 12px;
  height: 424px;
  display: none;
  position: relative;
}

#collection #browser #music {
  width: 190px;
  height: 100%;
  overflow: auto;
  padding: 10px 10px 0 10px;
}

#collection #browser #music ul {
  padding-left: 30px;
}

#collection #browser #music .artist {
  cursor: pointer;
}

#collection #browser #music ul ul li {
  list-style: decimal;
}

#collection #browser #album {
  position: absolute;
  top: 0;
  left: 220px;
  height:424px;
  width: 406px;
  overflow: auto;
  clear: both;
}

#collection #browser #album .album {
  clear: both;
  display: inline;
  position: relative;
  padding: 5px;  
}

#collection #browser #album .detail {
  float: left;
  padding-left: 15px;
  width: 250px;
}

#collection #browser #album h1 {
  padding-top: 10px;  
  font-size: 16px;
  font-weight: bold;
  padding-bottom: 10px;
  font-size: 14px;
  font-weight: bold;
}

#collection #browser #album .album img {
  clear: both;
  float: left;
  padding-top: 10px;    
  width: 120px;
  height: 120px;
}

.profile {
  text-align: left;
}

#collection #browser #album .album ol, .profile ol {
  list-style: decimal;
  padding-bottom: 15px;
}

.profile ol h3 {
  margin-left: 10px;
}

#collection #browser #album ol li, .profile ol li {
  cursor: pointer;
  list-style: decimal;
  margin-left: 28px;
}

.profile ol {
  display: inline-block;
  padding-right: 15px;
}

#collection #browser #album li.randomable {
  font-weight: bold;
}

#queue {
  background: url('/theme/cramppbo/images/queuebg.gif');
  left: 330px;
  width: 636px;
  min-height: 414px;
  padding: 0;
  margin: 10px 0 10px 0;
}

#queue .track {
  width: 200px;
  height: 200px;
  border: solid 1px #dfdfdf;
  background: #dfdfdf;
  margin: 0 10px 10px 0;
  padding: 0;
  float: left;
  position: relative;
}

#queue .track a {
  color: #FFF;
  text-decoration: none;
}

#queue .track.placeholder {
  background: url('/theme/cramppbo/images/ajax-loader-large.gif') no-repeat center center #dfdfdf;
  background-postion: center;
}

#queue .track .indicator {
  width: 10px;
  height: 10px;
  background: url('/theme/cramppbo/images/indicator_req.png');
  position: absolute;
  left: 190px;
}

#queue .track:first-child {
}

#queue .track .title {
  padding: 5px 10px 5px 10px;
  height: 35px;
  font-family:"Century Gothic";
  font-size: 14px;
  font-weight: bold;
  color: #FFF;
  position: absolute;
  top: 155px;
  width: 180px;
  background: url('/theme/cramppbo/images/trackbg.png');
  z-index: 51;
}

#queue .track .title .trackname {
  overflow: hidden;
  margin: 0;
  padding: 0;
  height: 20px;
}

#queue .track .title .artist {
  overflow: hidden;
  margin: 0;
  padding: 0;
  height: 15px;
  font-size: 11px;
  font-weight: normal;
}

#queue .track .detail {
  position: absolute;
  height: 200px;
  width: 200px;
  background: url('/theme/cramppbo/images/trackbg.png');
  z-index: 50;
  color: #FFF;
  font-size: 11px;  
}

#queue.playing .track .detail {
  background: url('/theme/cramppbo/images/trackbg.png');
  display: none;
  color: #FFF;
  font-size: 11px;
}

#queue .track #playbutton {
  position: absolute;
  left: 59px;
  top: 49px;
  cursor: pointer;
}

#queue .track #playbutton.ready {
  display: inherit;
}


#queue .track #playbutton:hover {
  top: 50px;
  left: 60px;
}

#queue .track .detail div {
  display: none;
}

#queue.playing .track .detail div {
  display: inherit;
}

#queue .track .detail .markstatus, #queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark {
  position: absolute;
  top: 130px;
}

#queue .track .detail .like, #queue .track .detail .dislike, #queue .track .detail .unmark {
  cursor: pointer;
}

#queue .track .detail .markstatus, #queue .track .detail .like {
  left: 20px;
}

#queue .track .detail .dislike, #queue .track .detail .unmark {
  left: 110px;
}

#queue .track .detail .markstatus img, #queue .track .detail .like img, #queue .track .detail .dislike img, #queue .track .detail .unmark img {
  padding-right: 7px;
  height: 10px;
  width: 10px;
}

#queue .track .userpic {
  position: absolute;
  top: 4px;
  left: 2px;
}

#queue .track .user {
  padding: 5px;
  height: 14px;
  width: 190px;
  font-size: 11px;
  font-weight: normal;
  color: #FFF;
  background: url('/theme/cramppbo/images/trackbg.png');
  position: absolute;
  display: none;
  z-index: 51;
}

#queue .track .user .username {
  padding-left: 16px;
}

br.clear {
  clear: both;
}

#welcome {
  width: 580px;
  text-align: left;
  padding-bottom: 30px;
}

#welcome h1 {
  padding: 10px;
  background: #FA3;
  color: #FFF;
}

#welcome p {
  padding: 10px 20px 0 20px;
}

#welcome ol {
  padding: 10px 50px 0 50px;
}

#welcome ol li {
  list-style: decimal;
}

#footer {
  clear: both;
  position: relative;
  margin-top: -26px;
  color: #FFF;
  font-size: 12px;
  background: url('/theme/cramppbo/images/stagebg.jpg');
  height: 16px;
  width: 100%;
  padding: 5px 0;
}

#footer a {
  text-decoration: none;
  color: #FFF;
}

#footer .details {
  margin-top: 3px;
  padding-left: 10px;
  float: left;
}

#footer .rdio { 
  padding-right: 10px;
  float: right;
}

.ui-autocomplete {
  width: 350px;
  max-height: 430px;
  overflow-y: auto;
}

.ui-autocomplete .ui-autocomplete-category {
  text-align: left;
	font-weight: bold;
	padding: .4em 0 .2em .4em;
	margin-top: .4em;
	line-height: 1.5;
	clear: both;
	background: #999;
	color: #FFF;
}

.ui-autocomplete .ui-autocomplete-category:first-child {
  margin-top: 0;
}


.ui-autocomplete .ui-menu-item {
  padding-bottom: 5px !important;
  height: 64px;
}

.ui-autocomplete .ui-menu-item._r, .ui-autocomplete .ui-menu-item.r {
  height: 20px;
}

.ui-autocomplete .ui-menu-item a{
  overflow-y: auto;
}

.ui-autocomplete .ui-menu-item img {
  float: left;
  padding-right: 5px;
}

.ui-autocomplete .ui-menu-item span {
  font-size: 11px;
  text-align: left;
  display: block;
}

.ui-autocomplete .ui-menu-item .main {
  font-weight: bold;
  font-size: 13px;
}

.highlight {
  background: #FF9;
  padding: 2px;
}

#error .buttons {
  padding-top: 5px;
  clear: both;
}

#error .button {
  padding: 0 5px;
  color: #C70;  
  cursor: pointer;
}

#error #message {
  overflow: auto;
  zoom:1;
}

#error #message .album {
  margin-left: auto;
  margin-right: auto;
  width: 150px;
}

label {
  padding-right: 10px;
}

.userlists {
  vertical-align: top;
}

.export {
  padding-top: 5px;
  list-style: none !important;
  cursor: pointer !important;
}

